--- a/index.html
+++ b/index.html
@@ -109,9 +109,13 @@
     <h2 class="text-center">Busque por categoria</h2>
 
     <!-- para possuir colunas é necessário uma linha, por isso o comando row, em cada linha, tenho 12 colunas, aqui, quero que cada card ocupe 6 colunas (ocupou as colunas, o próximo card vai "para baixo" e ocupa 6 colunas abaixo do card que já ocupou o restante acima) -->
-    <div class="container row">
+    <!-- mx-auto diz para calcular automaticamente os margins laterais (left e right), onde aqui está centralizando os elementos filhos na tela e g-4 nada mais é que o comando css: gap, onde 4 determina o "número de pixels" (no bootstrap vai de 1-5) e o valor do gap não influencia na quantidade de colunas que cada card ocupa, então, se um card ocupa 4 colunas e possui g-5, ele não terá influência (ou terá pouca nesse espaçamento dos cards)-->
+    <div class="container row mx-auto g-4">
 
-        <div class="col-6">
+        <!-- col-6 por si só refere-se a telas de celular (pensando em boas práticas) -->
+        <!-- col-md-4 atinge telas de tablets, onde, quero que cada card ocupe 4 colunas (como são 12, 3 cards = 12 colunas) -->
+        <!-- col-xxl-2 refere-se a telas de monitores e quero que neles todos os cards fiquem na mesma linha, ou seja, quero que cada card ocupe 2 colunas, aqui tenho 6 cards, logo: 6 * 2 = 12 (assim ocupando fazendo que todos os cards ocupem as colunas de apenas uma linha)-->
+        <div class="col-6 col-md-4 col-xxl-2">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
@@ -126,7 +130,7 @@
             </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-6 col-md-4 col-xxl-2">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
@@ -141,7 +145,7 @@
             </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-6 col-md-4 col-xxl-2">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
@@ -156,7 +160,7 @@
             </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-6 col-md-4 col-xxl-2">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
@@ -171,7 +175,7 @@
             </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-6 col-md-4 col-xxl-2">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
@@ -186,7 +190,7 @@
             </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-6 col-md-4 col-xxl-2">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
