--- a/index.html
+++ b/index.html
@@ -209,9 +209,11 @@
 
     <h2 class="text-center">Produtos que estão bombando!</h2>
 
-    <div class="container row mx-auto g-4">
+    <!-- deixando da forma que instrutor ensinou, porém (e também acho melhor) é possível resolver isso utilizando gap-4 apenas na div pai das colunas ao inves de pb-4 -->
+     <!-- um motivo para ele ter usado pb-4 é porque o gap da um espaçamento em todos os lados do card, onde nesta situação, onde para celular é não é necessário utilizar um espaçamento do lado pois fica um em cada linha, é melhor ter apenas o espaçamento onde necessário (no caso, embaixo) -->
+    <div class="container row mx-auto">
 
-        <div class="col-12 col-md-6 col-xxl-4">
+        <div class="col-12 col-md-6 col-xl-4 pb-4">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
@@ -232,29 +234,7 @@
             </div>
         </div>
 
-        <div class="col-12 col-md-6 col-xxl-4">
-            <div class="card">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
-                    preserveAspectRatio="xMidYMid slice">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#868e96"></rect>
-                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                </svg>
-                <div class="card-body">
-                    <h5 class="card-title">Produto</h5>
-                    <p class="card-text">
-                        Some quick example text to build on the card title and make up the
-                        bulk of the card's content.
-                    </p>
-                    <p>R$ 30,00</p>
-                    <a href="#" class="btn btn-primary">Ver mais</a>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="col-12 col-md-6 col-xxl-4">
+        <div class="col-12 col-md-6 col-xl-4 pb-4">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
@@ -276,7 +256,7 @@
             </div>
         </div>
 
-        <div class="col-12 col-md-6 col-xxl-4">
+        <div class="col-12 col-md-6 col-xl-4 pb-4">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
@@ -298,7 +278,7 @@
             </div>
         </div>
 
-        <div class="col-12 col-md-6 col-xxl-4">
+        <div class="col-12 col-md-6 col-xl-4 pb-4">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
@@ -320,7 +300,29 @@
             </div>
         </div>
 
-        <div class="col-12 col-md-6 col-xxl-4">
+        <div class="col-12 col-md-6 col-xl-4 pb-4">
+            <div class="card">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
+                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#868e96"></rect>
+                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+                </svg>
+                <div class="card-body">
+                    <h5 class="card-title">Produto</h5>
+                    <p class="card-text">
+                        Some quick example text to build on the card title and make up the
+                        bulk of the card's content.
+                    </p>
+                    <p>R$ 30,00</p>
+                    <a href="#" class="btn btn-primary">Ver mais</a>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-xl-4 pb-4">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
