--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meteora</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- link para incluir os ícones do bootstrap no projeto, este metódo abaixo é via cdn -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
@@ -347,6 +350,31 @@
             </div>
         </div>
     </div>
+
+    <!-- não preciso utilizar container aqui, pois o conteúdo desta section é algo mais "simples" onde não terei que usar grid, nem nada -->
+    <!-- uso de section ao invés de uma div aqui por conta de semântica mesmo, pois seria possível alcançar o mesmo resultado com uma div -->
+    <section class="text-center">
+
+        <h2>Conheça todas as nossas facilidades</h2>
+
+        <div>
+            <div><i class="bi bi-x-diamond fs-1"></i></div>
+            <div>PAGUE PELO PIX</div>
+            <div class="texto-menor">Ganhe 5% OFF em
+                pagamentos via PIX</div>
+        </div>
+        <div>
+            <div><i class="bi bi-arrow-repeat fs-1"></i></div>
+            <div>TROCA GRÁTIS</div>
+            <div class="texto-menor">Fique livre para trocar em até 30 dias.</div>
+        </div>
+        <div>
+            <div><i class="bi bi-flower1 fs-1"></i></div>
+            <div>SUSTENTABILIDADE</div>
+            <div class="texto-menor">Moda responsável, que respeita o meio ambiente.</div>
+        </div>
+        
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
