--- a/index.html
+++ b/index.html
@@ -353,27 +353,37 @@
 
     <!-- não preciso utilizar container aqui, pois o conteúdo desta section é algo mais "simples" onde não terei que usar grid, nem nada -->
     <!-- uso de section ao invés de uma div aqui por conta de semântica mesmo, pois seria possível alcançar o mesmo resultado com uma div -->
-    <section class="text-center">
+    <section class="pb-4">
 
-        <h2>Conheça todas as nossas facilidades</h2>
+        <h2 class="text-center">Conheça todas as nossas facilidades</h2>
 
-        <div>
-            <div><i class="bi bi-x-diamond fs-1"></i></div>
-            <div>PAGUE PELO PIX</div>
-            <div class="texto-menor">Ganhe 5% OFF em
-                pagamentos via PIX</div>
+        <div class="d-flex flex-column flex-lg-row align-items-center justify-content-lg-center gap-3 px-lg-3">
+            <div class="divs-facilidades d-flex align-items-lg-center">
+                <div><i class="bi bi-x-diamond fs-1"></i></div>
+                <div>
+                    <div class="ms-3 mb-1">PAGUE PELO PIX</div>
+                    <div class="texto-menor ms-3">Ganhe 5% OFF em
+                        pagamentos via PIX</div>
+                </div>
+            </div>
+
+            <div class="divs-facilidades d-flex align-items-lg-center">
+                <div><i class="bi bi-arrow-repeat fs-1"></i></div>
+                <div>
+                    <div class="ms-3 mb-1">TROCA GRÁTIS</div>
+                    <div class="texto-menor ms-3">Fique livre para trocar em até 30 dias.</div>
+                </div>
+            </div>
+
+            <div class="divs-facilidades d-flex align-items-lg-center">
+                <div><i class="bi bi-flower1 fs-1"></i></div>
+                <div>
+                    <div class="ms-3 mb-1">SUSTENTABILIDADE</div>
+                    <div class="texto-menor ms-3">Moda responsável, que respeita o meio ambiente.</div>
+                </div>
+            </div>
         </div>
-        <div>
-            <div><i class="bi bi-arrow-repeat fs-1"></i></div>
-            <div>TROCA GRÁTIS</div>
-            <div class="texto-menor">Fique livre para trocar em até 30 dias.</div>
-        </div>
-        <div>
-            <div><i class="bi bi-flower1 fs-1"></i></div>
-            <div>SUSTENTABILIDADE</div>
-            <div class="texto-menor">Moda responsável, que respeita o meio ambiente.</div>
-        </div>
-        
+
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
