--- a/index.html
+++ b/index.html
@@ -386,6 +386,15 @@
 
     </section>
 
+    <form>
+        <h5>Quer receber nossas novidades, promoções exclusivas e 10% OFF na primeira compra? Cadastre-se!</h5>
+        <div>
+            <input type="email" placeholder="Digite seu e-mail" aria-label="Digite seu e-mail"
+                aria-describedby="button-addon2" />
+            <button type="button" id="button-addon2">Enviar</button>
+        </div>
+    </form>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
         crossorigin="anonymous"></script>
