formatando formulário de "novidades"

--- a/index.html
+++ b/index.html
@@ -386,10 +386,12 @@
 
     </section>
 
-    <form>
+    <form class="border border-secondary m-3 p-3 text-center">
         <h5>Quer receber nossas novidades, promoções exclusivas e 10% OFF na primeira compra? Cadastre-se!</h5>
-        <div>
-            <input type="email" placeholder="Digite seu e-mail" aria-label="Digite seu e-mail"
+        <!-- input group junta o input dentro da div com seu respectivo botão -->
+        <div class="input-group my-3">
+            <!-- form-control faz o input (juntamente do seu botão) ocuparem toda a largura disponível -->
+            <input type="email" class="form-control border border-secondary rounded-1" placeholder="Digite seu e-mail" aria-label="Digite seu e-mail"
                 aria-describedby="button-addon2" />
             <button type="button" id="button-addon2">Enviar</button>
         </div>
