finalizando criação de wireframe

--- a/index.html
+++ b/index.html
@@ -397,6 +397,12 @@
         </div>
     </form>
 
+    <!--!por mais queseja possível colocar o icone de "©" existem alguns navegadores que não conseguem interpreta-lo -->
+    <!-- !para evitar qualquer tipo de problema, o bootstrap, dentro de seus ícones, oferece ese mesmo símbolo, que estamos utilizando logo abaixo -->
+    <footer class="text-center">
+        <p class="py-3">2023 <i class="bi bi-c-circle"></i> Desenvolvido por Alura | Projeto fictício sem fins comerciais.</p>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
         crossorigin="anonymous"></script>
