--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
 
     <!-- sm seguindo os breakpoins para que ele apenas fique no modo de "menu hamburger" em telas menores que 576px, assim, atingindo mais as telas de celulares e seguindo a prototipação do figma -->
+    <!-- ! bg-black não se encontra na doc (tb n achei navbar-dark) - porém, o bg black deixa o fundo em preto e navbar-dark faz o conteúdo da navbar(textos etc) se adaptarem ao fundo escurto, ou seja, ficam mais claros -->
     <nav class="navbar navbar-expand-sm bg-black navbar-dark">
         <div class="container-fluid">
             <!--! ao addicionar img ela ocupa mais espaço que deveria e descentraliza os nossos elementos da navbar -->
@@ -48,7 +49,8 @@
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2 rounded-0" type="search" placeholder="Digite o produto" aria-label="Search">
+                    <input class="form-control me-2 rounded-0" type="search" placeholder="Digite o produto"
+                        aria-label="Search">
                     <button class="btn btn-outline-light rounded-0" type="submit">Buscar</button>
                 </form>
             </div>
@@ -136,8 +138,10 @@
                     <rect width="100%" height="100%" fill="#868e96"></rect>
                     <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
                 </svg>
-                <div class="card-header">
-                    <p class="text-center">Categoria</p>
+                <!-- ? card text é adicionado para ajustar o texto dentro do card, ficando "mais bonito visualmente" através de espaçamentos extras, da impressão de estar mais organizado no card e se alinha com o estilo padrão de cards do bootstrap (além é claro, de remover aquele espaçamento ridículo que toda tag "p" possui no bootstrap) -->
+                <!-- ? text-bg-dark deixa a cor dos textos em branco também (acredito que a função dessa classe é fazer com que os textos filhos tenham a cor branca por saberem que o bg é escuro, onde, não faria sentido text-bg-dark deixar escuro também sendo que o fundo da div já é escuro, loucura né?) -->
+                <div class="card-header bg-black text-bg-dark">
+                    <p class="text-center card-text">Categoria</p>
                 </div>
             </div>
         </div>
@@ -151,8 +155,8 @@
                     <rect width="100%" height="100%" fill="#868e96"></rect>
                     <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
                 </svg>
-                <div class="card-header">
-                    <p class="text-center">Categoria</p>
+                <div class="card-header bg-black text-bg-dark">
+                    <p class="text-center card-text">Categoria</p>
                 </div>
             </div>
         </div>
@@ -166,8 +170,8 @@
                     <rect width="100%" height="100%" fill="#868e96"></rect>
                     <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
                 </svg>
-                <div class="card-header">
-                    <p class="text-center">Categoria</p>
+                <div class="card-header bg-black text-bg-dark">
+                    <p class="text-center card-text">Categoria</p>
                 </div>
             </div>
         </div>
@@ -181,8 +185,8 @@
                     <rect width="100%" height="100%" fill="#868e96"></rect>
                     <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
                 </svg>
-                <div class="card-header">
-                    <p class="text-center">Categoria</p>
+                <div class="card-header bg-black text-bg-dark">
+                    <p class="text-center card-text">Categoria</p>
                 </div>
             </div>
         </div>
@@ -196,8 +200,8 @@
                     <rect width="100%" height="100%" fill="#868e96"></rect>
                     <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
                 </svg>
-                <div class="card-header">
-                    <p class="text-center">Categoria</p>
+                <div class="card-header bg-black text-bg-dark">
+                    <p class="text-center card-text">Categoria</p>
                 </div>
             </div>
         </div>
@@ -211,8 +215,8 @@
                     <rect width="100%" height="100%" fill="#868e96"></rect>
                     <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
                 </svg>
-                <div class="card-header">
-                    <p class="text-center">Categoria</p>
+                <div class="card-header bg-black text-bg-dark">
+                    <p class="text-center card-text">Categoria</p>
                 </div>
             </div>
         </div>
@@ -243,7 +247,7 @@
                         bulk of the card's content.
                     </p>
                     <p>R$ 30,00</p>
-                    <a href="#" class="btn btn-primary">Ver mais</a>
+                    <a href="#" class="btn btn-primary botao_lilas rounded-0 border-0">Ver mais</a>
                 </div>
             </div>
         </div>
@@ -361,32 +365,32 @@
 
     <!-- não preciso utilizar container aqui, pois o conteúdo desta section é algo mais "simples" onde não terei que usar grid, nem nada -->
     <!-- uso de section ao invés de uma div aqui por conta de semântica mesmo, pois seria possível alcançar o mesmo resultado com uma div -->
-    <section class="pb-4">
+    <section class="pb-4 bg-black text-white">
 
         <h2 class="text-center">Conheça todas as nossas facilidades</h2>
 
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-lg-center gap-3 px-lg-3">
             <div class="divs-facilidades d-flex align-items-lg-center">
-                <div><i class="bi bi-x-diamond fs-1"></i></div>
+                <div><i class="bi bi-x-diamond fs-1 verde_limao"></i></div>
                 <div>
-                    <div class="ms-3 mb-1">PAGUE PELO PIX</div>
+                    <div class="ms-3 mb-1 verde_limao">PAGUE PELO PIX</div>
                     <div class="texto-menor ms-3">Ganhe 5% OFF em
                         pagamentos via PIX</div>
                 </div>
             </div>
 
             <div class="divs-facilidades d-flex align-items-lg-center">
-                <div><i class="bi bi-arrow-repeat fs-1"></i></div>
+                <div><i class="bi bi-arrow-repeat fs-1 verde_limao"></i></div>
                 <div>
-                    <div class="ms-3 mb-1">TROCA GRÁTIS</div>
+                    <div class="ms-3 mb-1 verde_limao">TROCA GRÁTIS</div>
                     <div class="texto-menor ms-3">Fique livre para trocar em até 30 dias.</div>
                 </div>
             </div>
 
             <div class="divs-facilidades d-flex align-items-lg-center">
-                <div><i class="bi bi-flower1 fs-1"></i></div>
+                <div><i class="bi bi-flower1 fs-1 verde_limao"></i></div>
                 <div>
-                    <div class="ms-3 mb-1">SUSTENTABILIDADE</div>
+                    <div class="ms-3 mb-1 verde_limao">SUSTENTABILIDADE</div>
                     <div class="texto-menor ms-3">Moda responsável, que respeita o meio ambiente.</div>
                 </div>
             </div>
@@ -407,7 +411,7 @@
 
     <!--!por mais queseja possível colocar o icone de "©" existem alguns navegadores que não conseguem interpreta-lo -->
     <!-- !para evitar qualquer tipo de problema, o bootstrap, dentro de seus ícones, oferece ese mesmo símbolo, que estamos utilizando logo abaixo -->
-    <footer class="text-center">
+    <footer class="text-center bg-black text-bg-dark">
         <p class="py-3">2023 <i class="bi bi-c-circle"></i> Desenvolvido por Alura | Projeto fictício sem fins
             comerciais.</p>
     </footer>
