--- a/index.html
+++ b/index.html
@@ -247,7 +247,8 @@
                         bulk of the card's content.
                     </p>
                     <p>R$ 30,00</p>
-                    <a href="#" class="btn btn-primary botao_lilas rounded-0 border-0">Ver mais</a>
+                    <!-- mantive a classe btn apenas para dar os espaçamentos de um botão -->
+                    <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
                 </div>
             </div>
         </div>
@@ -268,29 +269,7 @@
                         bulk of the card's content.
                     </p>
                     <p>R$ 30,00</p>
-                    <a href="#" class="btn btn-primary">Ver mais</a>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="col-12 col-md-6 col-xl-4 pb-4">
-            <div class="card">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
-                    preserveAspectRatio="xMidYMid slice">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#868e96"></rect>
-                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                </svg>
-                <div class="card-body">
-                    <h5 class="card-title">Produto</h5>
-                    <p class="card-text">
-                        Some quick example text to build on the card title and make up the
-                        bulk of the card's content.
-                    </p>
-                    <p>R$ 30,00</p>
-                    <a href="#" class="btn btn-primary">Ver mais</a>
+                    <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
                 </div>
 
             </div>
@@ -312,7 +291,7 @@
                         bulk of the card's content.
                     </p>
                     <p>R$ 30,00</p>
-                    <a href="#" class="btn btn-primary">Ver mais</a>
+                    <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
                 </div>
 
             </div>
@@ -334,7 +313,7 @@
                         bulk of the card's content.
                     </p>
                     <p>R$ 30,00</p>
-                    <a href="#" class="btn btn-primary">Ver mais</a>
+                    <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
                 </div>
 
             </div>
@@ -356,7 +335,29 @@
                         bulk of the card's content.
                     </p>
                     <p>R$ 30,00</p>
-                    <a href="#" class="btn btn-primary">Ver mais</a>
+                    <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-xl-4 pb-4">
+            <div class="card">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
+                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#868e96"></rect>
+                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+                </svg>
+                <div class="card-body">
+                    <h5 class="card-title">Produto</h5>
+                    <p class="card-text">
+                        Some quick example text to build on the card title and make up the
+                        bulk of the card's content.
+                    </p>
+                    <p>R$ 30,00</p>
+                    <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
                 </div>
 
             </div>
@@ -405,7 +406,7 @@
             <!-- form-control faz o input (juntamente do seu botão) ocuparem toda a largura disponível -->
             <input type="email" class="form-control border border-secondary rounded-1" placeholder="Digite seu e-mail"
                 aria-label="Digite seu e-mail" aria-describedby="button-addon2" />
-            <button type="button" id="button-addon2">Enviar</button>
+            <button type="button" id="button-addon2" class="btn-lilas border-0 text-white">Enviar</button>
         </div>
     </form>
 
