corridgindo problemas de responsividade no mobile

--- a/index.html
+++ b/index.html
@@ -413,8 +413,9 @@
 
     <!--!por mais queseja possível colocar o icone de "©" existem alguns navegadores que não conseguem interpreta-lo -->
     <!-- !para evitar qualquer tipo de problema, o bootstrap, dentro de seus ícones, oferece ese mesmo símbolo, que estamos utilizando logo abaixo -->
-    <footer class="text-center bg-black text-bg-dark">
-        <p class="py-3">2023 <i class="bi bi-c-circle"></i> Desenvolvido por Alura | Projeto fictício sem fins
+    <footer class="rodape text-center bg-black text-bg-dark">
+        <!-- ! mx aplicado aqui pois em resoluções de celulares, fica muito colado nas extremidades da tela -->
+        <p class="py-3 mx-1">2023 <i class="bi bi-c-circle"></i> Desenvolvido por Alura | Projeto fictício sem fins
             comerciais.</p>
     </footer>
 
