--- a/index.html
+++ b/index.html
@@ -67,52 +67,41 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
         </div>
+        <!-- !classe img-fluid do bootstrap auxilia a fazer com que a img fique no espaço reservado para ela, sem que se distorça -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <!-- !classe img-fluid do bootstrap auxilia a fazer com que a img fique no espaço reservado para ela, sem que se distorça -->
-                <img class="img-fluid d-md-none" src="./assets/Mobile/banner1-mobile.png"
-                    alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás">
-
-                <img class="img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner1-tablet.png"
-                    alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás">
-
-                <img class="img-fluid d-none d-md-none d-xl-block" src="./assets/Desktop/banner1-desktop.png"
-                    alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                <!-- !pedindo w-100 evita que tenha o bug que aconteceu comigo de chegar em telas maiores de 1400px e ficar sobrando um espaço em branco -->
+                <img class="w-100 img-fluid d-md-none" src="./assets/Mobile/banner1-mobile.png"
+                    alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás.">
+                <img class="w-100 img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner1-tablet.png"
+                    alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás.">
+                <img class="w-100 img-fluid d-none d-xl-block" src="./assets/Desktop/banner1-desktop.png"
+                    alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás.">
+            </div>
+            <div class="carousel-item position-relative">
+                <img class="w-100 img-fluid d-md-none" src="./assets/Mobile/banner2-mobile.png"
+                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
+                <img class="w-100 img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner2-tablet.png"
+                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
+                <img class="w-100 img-fluid d-none d-xl-block" src="./assets/Desktop/banner2-desktop.png"
+                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
+                <div class="carousel-caption position-absolute posicao">
+                    <h5 class="fs-1">COLEÇÃO ATEMPORAL</h5>
+                    <p class="fs-4">Estilo e qualidade para durar.</p>
                 </div>
             </div>
-
-            <div class="carousel-item">
-                <!-- !classe img-fluid do bootstrap auxilia a fazer com que a img fique no espaço reservado para ela, sem que se distorça -->
-                <img class="img-fluid d-md-none" src="./assets/Mobile/banner2-mobile.png"
-                    alt="Modelo feminina vestindo blusa preta em fundo rosa">
-
-                <img class="img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner2-tablet.png"
-                    alt="Modelo feminina vestindo blusa preta em fundo rosa">
-
-                <img class="img-fluid d-none d-md-none d-xl-block" src="./assets/Desktop/banner2-desktop.png"
-                    alt="Modelo feminina vestindo blusa preta em fundo rosa">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <!-- !classe img-fluid do bootstrap auxilia a fazer com que a img fique no espaço reservado para ela, sem que se distorça -->
-                <img class="img-fluid d-md-none" src="./assets/Mobile/banner3-mobile.png"
-                    alt="Modelo feminina vestindo blusa preta em fundo rosa">
-
-                <img class="img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner3-tablet.png"
-                    alt="Modelo feminina vestindo blusa preta em fundo rosa">
-
-                <img class="img-fluid d-none d-md-none d-xl-block" src="./assets/Desktop/banner3-desktop.png"
-                    alt="Modelo feminina vestindo blusa preta em fundo rosa">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+            <!-- !posição dos elementos filhos serão relativas a esse elemento pai (carousel-item/que aplicou a classe) -->
+            <div class="carousel-item position-relative">
+                <img class="w-100 img-fluid d-md-none" src="./assets/Mobile/banner3-mobile.png"
+                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
+                <img class="w-100 img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner3-tablet.png"
+                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
+                <img class="w-100 img-fluid d-none d-xl-block" src="./assets/Desktop/banner3-desktop.png"
+                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
+                <!-- ? através dessa combinação de position absolute e position relative (div pai) é possível alterar a posição dessa div para ficar na onde desejo, no caso, para ficarem igual ao wireframe de alta qualidade -->
+                <div class="carousel-caption position-absolute posicao">
+                    <h5 class="fs-1">COLEÇÃO ATEMPORAL</h5>
+                    <p class="fs-4">Alto impacto visual, baixo impacto ambiental!</p>
                 </div>
             </div>
         </div>
