--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </button>
     </div>
 
-    <h2 class="text-center py-3">Busque por categoria</h2>
+    <h2 class="text-center my-3 my-md-5">Busque por categoria</h2>
 
     <!-- para possuir colunas é necessário uma linha, por isso o comando row, em cada linha, tenho 12 colunas, aqui, quero que cada card ocupe 6 colunas (ocupou as colunas, o próximo card vai "para baixo" e ocupa 6 colunas abaixo do card que já ocupou o restante acima) -->
     <!-- mx-auto diz para calcular automaticamente os margins laterais (left e right), onde aqui está centralizando os elementos filhos na tela e g-4 nada mais é que o comando css: gap, onde 4 determina o "número de pixels" (no bootstrap vai de 1-5) e o valor do gap não influencia na quantidade de colunas que cada card ocupa, então, se um card ocupa 4 colunas e possui g-5, ele não terá influência (ou terá pouca nesse espaçamento dos cards)-->
@@ -221,7 +221,7 @@
 
     </div>
 
-    <h2 class="text-center py-3">Produtos que estão bombando!</h2>
+    <h2 class="text-center my-3 my-md-5">Produtos que estão bombando!</h2>
 
     <!-- deixando da forma que instrutor ensinou, porém (e também acho melhor) é possível resolver isso utilizando gap-4 apenas na div pai das colunas ao inves de pb-4 -->
     <!-- um motivo para ele ter usado pb-4 é porque o gap da um espaçamento em todos os lados do card, onde nesta situação, onde para celular é não é necessário utilizar um espaçamento do lado pois fica um em cada linha, é melhor ter apenas o espaçamento onde necessário (no caso, embaixo) -->
@@ -399,7 +399,7 @@
 
     <!-- my para não ficar colado nas caixas debaixo e de cime e mx-4 para não ficar colado nas extremidades em telas menores -->
     <!-- !nas telas de navegador estava ocupando muito espaço, tava achando feio, então fiz uma baianada para atindir apenas telas xl (1200px), defini uma largura fixa para o a classe formulario nessas condições e alinhei ao centro, ficando exatamente como eu queria e não estranho ocupando todo aquele espaço desnecessário no desktop -->
-    <div class="d-xl-flex justify-content-xl-center my-5 mx-4">
+    <div class="d-xl-flex justify-content-xl-center my-3 my-xl-5 mx-4">
         <form class="border border-secondary p-4 text-center formulario">
             <h5>Quer receber nossas novidades, promoções exclusivas e 10% OFF na primeira compra? Cadastre-se!</h5>
             <!-- input group junta o input dentro da div com seu respectivo botão -->
@@ -407,7 +407,7 @@
                 <!-- form-control faz o input (juntamente do seu botão) ocuparem toda a largura disponível -->
                 <input type="email" class="form-control border border-secondary rounded-0"
                     placeholder="Digite seu e-mail" aria-label="Digite seu e-mail" aria-describedby="button-addon2" />
-                <button type="button" id="button-addon2" class="btn-lilas border-0 text-white">Enviar</button>
+                <button type="button" id="button-addon2" class="btn-lilas px-3 border-0 text-white">Enviar</button>
             </div>
         </form>
     </div>
