adicionando imagens em seção "produtos"

--- a/index.html
+++ b/index.html
@@ -220,21 +220,18 @@
     <div class="container row mx-auto">
 
         <div class="col-12 col-md-6 col-xl-4 pb-4">
-            <div class="card">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
-                    preserveAspectRatio="xMidYMid slice">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#868e96"></rect>
-                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                </svg>
+            <div class="card rounded-0 border-none">
+                <img class="d-md-none" src="./assets/Mobile/produtos/camiseta.png" alt="Modelo masculino com camiseta amarela, gorro preto em frente a parede cinza.">
+
+                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/camiseta.png" alt="Modelo masculino com camiseta amarela, gorro preto em frente a parede cinza.">
+
+                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/camiseta.png" alt="Modelo masculino com camiseta amarela, gorro preto em frente a parede cinza.">
                 <div class="card-body">
-                    <h5 class="card-title">Produto</h5>
+                    <h5 class="card-title">Camiseta Conforto</h5>
                     <p class="card-text">
-                        Some quick example text to build on the card title and make up the
-                        bulk of the card's content.
+                        Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.
                     </p>
-                    <p>R$ 30,00</p>
+                    <p class="fw-bold">R$ 70,00</p>
                     <!-- mantive a classe btn apenas para dar os espaçamentos de um botão -->
                     <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
                 </div>
@@ -242,21 +239,19 @@
         </div>
 
         <div class="col-12 col-md-6 col-xl-4 pb-4">
-            <div class="card">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
-                    preserveAspectRatio="xMidYMid slice">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#868e96"></rect>
-                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                </svg>
+            <div class="card h-100 rounded-0 border-none">
+                <img class="h-100 d-md-none" src="./assets/Mobile/produtos/calca.png" alt="Modelo feminina em fundo deserto com calça de alfaiataria bege.">
+
+                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/calca.png" alt="Modelo feminina em fundo deserto com calça de alfaiataria bege.">
+
+                <img class="d-none d-xl-block" src="./assets/Desktop/produtos/calca.png" alt="Modelo feminina em fundo deserto com calça de alfaiataria bege.">
+
                 <div class="card-body">
-                    <h5 class="card-title">Produto</h5>
+                    <h5 class="card-title">Calça Alfaiataria</h5>
                     <p class="card-text">
-                        Some quick example text to build on the card title and make up the
-                        bulk of the card's content.
+                        Modelo Wide Leg alfaiataria em linho. Uma peça pra vida toda!
                     </p>
-                    <p>R$ 30,00</p>
+                    <p class="fw-bold">R$  180,00</p>
                     <a href="#" class="btn btn-lilas text-white rounded-0 border-0">Ver mais</a>
                 </div>
 
